--- a/README.org
+++ b/README.org
@@ -1,30 +1,9 @@
 #+TITLE: NGender layer
 
-# The maximum height of the logo should be 200 pixels.
-[[img/NGender.png]]
+* Emacs Profile Ideas
 
-# TOC links should be GitHub style anchors.
-* Table of Contents                                        :TOC_4_gh:noexport:
-- [[#description][Description]]
-- [[#install][Install]]
-- [[#key-bindings][Key bindings]]
+This is all an old mess, /except/ for
 
-* Description
-This layer does wonderful things:
-  - thing01
+[[file:org-capture.el][org-capture.el]]
 
-* Install
-To use this configuration layer, add it to your =~/.spacemacs=. You will need to
-add =NGender= to the existing =dotspacemacs-configuration-layers= list in this
-file.
-
-* Key bindings
-
-| Key Binding | Description    |
-|-------------+----------------|
-| ~SPC x x x~ | Does thing01   |
-# Use GitHub URLs if you wish to link a Spacemacs documentation file or its heading.
-# Examples:
-# [[https://github.com/syl20bnr/spacemacs/blob/master/doc/VIMUSERS.org#sessions]]
-# [[https://github.com/syl20bnr/spacemacs/blob/master/layers/%2Bfun/emoji/README.org][Link to Emoji layer README.org]]
-# If space-doc-mode is enabled, Spacemacs will open a local copy of the linked file.
+which may give you some ideas for how to set up org-capture!
